@@ -66,7 +66,7 @@ def test_notfound():
     config.commit()
 
     request = app.request(get_environ(path=''))
-    request.mounts.append(app.mounted())
+    request.mounted = app.mounted()
 
     with pytest.raises(HTTPNotFound):
         publish(request)
@@ -113,7 +113,7 @@ def test_request_view():
     register_view(app, Model, view, render=render_json)
 
     request = app.request(get_environ(path=''))
-    request.mounts = [app]  # XXX should do this centrally
+    request.mounted = app  # XXX should do this centrally
 
     model = Model()
     response = resolve_response(request, model)
@@ -136,7 +136,7 @@ def test_request_view_with_predicates():
                   predicates=dict(name='foo'))
 
     request = app.request(get_environ(path=''))
-    request.mounts = [app]  # XXX should do this centrally
+    request.mounted = app  # XXX should do this centrally
 
     model = Model()
     # since the name is set to foo, we get nothing here
@@ -146,7 +146,7 @@ def test_request_view_with_predicates():
     # the predicate information in the request is ignored when we do a
     # manual view lookup using request.view
     request = app.request(get_environ(path='foo'))
-    request.mounts = [app]  # XXX should do this centrally
+    request.mounted = app  # XXX should do this centrally
     assert request.view(model) is None
 
 
@@ -179,7 +179,7 @@ def test_view_raises_http_error():
     register_view(app, Model, view)
 
     request = app.request(get_environ(path='foo'))
-    request.mounts.append(app.mounted())
+    request.mounted = app.mounted()
 
     with pytest.raises(HTTPBadRequest):
         publish(request)
